--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">Calculator</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_calculator">calculator</string>
+    <string name="title_activity_calculator">calculatorcccccc</string>
+    <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
 </resources>
