--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">Calculator</string>
-
+    <string name="content">next</string>
     <string name="hello">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_calculator">calculatorcccccc</string>
+    <string name="title_activity_calculator">calculatorcc</string>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
-</resources>
+    <color name="transparent">#9000</color>
+    <string name="title_activity_cont_tent">contTent</string>
+
+    <string name="hello_world">Hello world!</string>
+    </resources>
